Fix layouts on mobile

--- a/assets/css/fosskers.scss
+++ b/assets/css/fosskers.scss
@@ -21,26 +21,46 @@ $navbar-breakpoint: 0;
 
 // --- CSS Grid --- //
 
-.grid-container {
+// When at mobile sizes, the right side-bar disappears, but the left is maintained.
+.grid-with-sidebar {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.1fr auto;
   gap: 10px 10px;
   grid-template-areas:
     "grid-navbar grid-navbar grid-navbar grid-navbar"
-    "grid-left grid-main grid-main grid-right";
+    "grid-sidebar-left grid-main grid-main grid-sidebar-right";
+}
+
+// When at mobile sizes, the main body gets the full screen.
+.grid-full {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.1fr auto;
+  gap: 10px 10px;
+  grid-template-areas:
+    "grid-navbar grid-navbar grid-navbar grid-navbar"
+    "grid-full-left grid-main grid-main grid-full-right";
 }
 
 .grid-navbar {
   grid-area: grid-navbar;
 }
 
-.grid-left {
-  grid-area: grid-left;
+.grid-sidebar-left {
+  grid-area: grid-sidebar-left;
 }
 
-.grid-right {
-  grid-area: grid-right;
+.grid-sidebar-right {
+  grid-area: grid-sidebar-right;
+}
+
+.grid-full-left {
+  grid-area: grid-full-left;
+}
+
+.grid-full-right {
+  grid-area: grid-full-right;
 }
 
 .grid-main {
@@ -49,14 +69,31 @@ $navbar-breakpoint: 0;
 }
 
 @media (max-width: 1024px) {
-  .grid-container {
+  .grid-with-sidebar {
     grid-template-areas:
       "grid-navbar grid-navbar grid-navbar grid-navbar"
-      "grid-left grid-main grid-main grid-main";
+      "grid-sidebar-left grid-main grid-main grid-main";
   }
 
-  .grid-right {
+  .grid-full {
+    grid-template-areas:
+      "grid-navbar grid-navbar grid-navbar grid-navbar"
+      "grid-main grid-main grid-main grid-main";
+  }
+
+  .grid-sidebar-right,
+  .grid-full-left,
+  .grid-full-right {
     display: none;
+  }
+
+  .grid-main {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .mobile-hidden {
+      display: none;
   }
 }
 
@@ -94,22 +131,22 @@ $navbar-breakpoint: 0;
 // --- Twitch --- //
 
 .twitch {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .twitch-player {
-    padding: 56.25%;
-    position: relative;
+  padding: 56.25%;
+  position: relative;
 
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 56.25%;
-    }
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 56.25%;
+  }
 }
 
 // --- Blog --- //
